--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
 	"description": "Dog Adoption Platform API",
 	"main": "app.js",
 	"scripts": {
-		"start": "node app.js",
-		"dev": "nodemon app.js"
+		"start": "node server.js",
+		"dev": "cross-env NODE_ENV=development nodemon server.js",
+		"test": "cross-env NODE_ENV=test mocha --exit"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"bcrypt": "^6.0.0",
 		"cookie-parser": "^1.4.7",
+		"cross-env": "^10.0.0",
 		"dotenv": "^17.2.2",
 		"express": "^5.1.0",
 		"jsonwebtoken": "^9.0.2",
@@ -20,6 +22,9 @@
 		"validator": "^13.15.15"
 	},
 	"devDependencies": {
+		"chai": "^4.5.0",
+		"chai-http": "^4.4.0",
+		"mocha": "^11.7.2",
 		"nodemon": "^3.1.0"
 	}
 }
